@@ -53,6 +53,7 @@ define('MAG_CURRENTWEEK',		38);
 define('MAG_CURRENTDOW',		39);
 define('MAG_REVISIONID',		40);
 define('MAG_SCRIPTPATH',		41);
+define('MAG_SERVERNAME',		42);
 
 $wgVariableIDs = array(
 	MAG_CURRENTMONTH,
@@ -66,6 +67,7 @@ $wgVariableIDs = array(
 	MAG_NUMBEROFARTICLES,
 	MAG_SITENAME,
 	MAG_SERVER,
+	MAG_SERVERNAME,
 	MAG_SCRIPTPATH,
 	MAG_PAGENAME,
 	MAG_PAGENAMEE,
